ownuserprofile image bug solve

--- a/app/src/main/res/layout/activity_own_user_profile_layout.xml
+++ b/app/src/main/res/layout/activity_own_user_profile_layout.xml
@@ -87,7 +87,7 @@
                         android:layout_alignParentBottom="true"
                         android:layout_marginLeft="@dimen/medium_margin"
                         android:text=""
-                        android:textColor="#FFFFFF"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/medium_textsize"
                         android:textStyle="bold" />
 
