--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -11,10 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/r1"
-        android:visibility="invisible">
+        android:visibility="visible">
 
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
@@ -30,6 +31,7 @@
                 app:expandedTitleMarginEnd="64dp"
                 app:expandedTitleMarginStart="48dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
 
                 <FrameLayout
                     android:layout_width="match_parent"
@@ -77,7 +79,9 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:visibility="visible"
+                    app:layout_collapseMode="parallax">
 
 
                     <TextView
@@ -87,6 +91,7 @@
                         android:layout_alignParentBottom="true"
                         android:layout_marginLeft="@dimen/medium_margin"
                         android:text=""
+                        android:visibility="gone"
                         android:textColor="#FFFFFF"
                         android:textSize="@dimen/medium_textsize"
                         android:textStyle="bold" />
@@ -126,7 +131,7 @@
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_height="35dp"
                     android:clipToPadding="false"
                     app:contentInsetEnd="0dp"
                     app:contentInsetLeft="0dp"
@@ -150,6 +155,15 @@
                             android:onClick="backBtnAction"
                             android:src="@drawable/back_arrow"
                             android:tint="@color/white" />
+
+                        <TextView
+                            android:id="@+id/toolbar_user_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone"
+                            android:layout_toRightOf="@+id/backPreviousActivityImage"
+                            android:textColor="#FFFFFF"
+                            android:textStyle="bold" />
 
                         <ImageView
                             android:id="@+id/likeImage"
