--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -68,10 +68,9 @@
                     android:gravity="center"
                     android:hint="@string/email"
                     android:imeOptions="actionNext"
-                    android:nextFocusForward="@+id/login_password"
                     android:inputType="text"
                     android:maxLines="1"
-                    android:text="qamehedi@gmail.com" />
+                    android:nextFocusForward="@+id/login_password" />
             </android.support.v7.widget.CardView>
 
 
@@ -97,8 +96,7 @@
                     android:background="#ffffff"
                     android:gravity="center"
                     android:hint="@string/password"
-                    android:inputType="textPassword"
-                    android:text="12345678" />
+                    android:inputType="textPassword" />
             </android.support.v7.widget.CardView>
 
 
