--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -71,7 +71,7 @@
                     android:nextFocusForward="@+id/login_password"
                     android:inputType="text"
                     android:maxLines="1"
-                    android:text="qamehedi@gmail.com" />
+                    android:text="" />
             </android.support.v7.widget.CardView>
 
 
@@ -98,7 +98,7 @@
                     android:gravity="center"
                     android:hint="@string/password"
                     android:inputType="textPassword"
-                    android:text="12345678" />
+                    android:text="" />
             </android.support.v7.widget.CardView>
 
 
