--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -83,10 +83,13 @@
                     <TextView
                         android:id="@+id/user_name"
 
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/background_3"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginLeft="@dimen/medium_margin"
+                        android:gravity="bottom"
+                        android:paddingLeft="@dimen/medium_margin"
+                        android:layout_marginBottom="@dimen/small_margin"
                         android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="@dimen/medium_textsize"
