--- a/app/src/main/res/layout/custom_tab_item2.xml
+++ b/app/src/main/res/layout/custom_tab_item2.xml
@@ -18,11 +18,11 @@
             android:layout_toRightOf="@+id/text_tab"
             android:background="@drawable/badge_item_count"
             android:gravity="center"
-            android:text="110"
+            android:text="০"
             android:textColor="#000"
             android:textSize="8sp"
             android:textStyle="bold"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
 
         <TextView
