--- a/app/src/main/res/layout/activity_own_user_profile_layout.xml
+++ b/app/src/main/res/layout/activity_own_user_profile_layout.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent"
     android:background="#e9ebed">
 
-
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordnatelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/r1"
         android:visibility="invisible">
+
 
 
         <android.support.design.widget.AppBarLayout
@@ -31,10 +31,19 @@
                 app:expandedTitleMarginStart="48dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+
+
+
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_collapseMode="parallax">
+
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/pager"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility="visible"/>
 
                     <android.support.v4.view.ViewPager
                         android:id="@+id/viewpager"
@@ -58,6 +67,7 @@
                         android:visibility="visible">
 
 
+
                         <ImageView
                             android:id="@+id/edit_profile_image"
                             android:layout_width="@dimen/user_profile_edit_image_width"
@@ -73,7 +83,6 @@
                     </RelativeLayout>
 
                 </FrameLayout>
-
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -119,8 +128,6 @@
                         android:layout_toRightOf="@+id/page2"
                         android:src="@android:drawable/arrow_up_float"
                         android:visibility="gone" />
-
-
                 </RelativeLayout>
 
                 <android.support.v7.widget.Toolbar
