--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -102,6 +102,7 @@
                         android:layout_height="match_parent"
                         android:visibility="gone"
                         android:layout_weight="1"
+                        android:layout_marginRight="1dp"
                         android:background="@drawable/btn_border"
                         android:textColor="@drawable/button_selector"
                         android:text="@string/accept_btn_text"
@@ -112,6 +113,7 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:visibility="gone"
+                        android:layout_marginLeft="1dp"
                         android:layout_weight="1"
                         android:background="@drawable/btn_border"
                         android:textColor="@drawable/button_selector"
