Google Play Crash Fix, Multiple Image In Profile Picture

--- a/app/src/main/res/layout/viewpager_item.xml
+++ b/app/src/main/res/layout/viewpager_item.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:background="#730709"
+        android:background="@color/accountrecharge_backGround_color"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
          />
 
