--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -19,6 +19,65 @@
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
 
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:clipToPadding="false"
+                app:contentInsetEnd="0dp"
+                app:contentInsetLeft="0dp"
+                app:contentInsetRight="0dp"
+                app:contentInsetStart="0dp"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:background="@color/white">
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="@dimen/small_padding">
+
+
+                    <ImageView
+                        android:id="@+id/backPreviousActivityImage"
+                        android:layout_width="@dimen/small_image_size"
+                        android:layout_height="@dimen/small_image_size"
+                        android:onClick="backBtnAction"
+                        android:src="@drawable/red_back_arrow"
+                        android:layout_gravity="center"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentLeft="true"/>
+
+                    <TextView
+                        android:id="@+id/user_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:lines="2"
+                        android:text=""
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:gravity="center"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="@dimen/medium_textsize"
+                        android:textStyle="bold" />
+
+
+                    <ImageView
+                        android:id="@+id/likeImage"
+                        android:layout_width="@dimen/small_image_size"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/small_margin"
+                        android:src="@drawable/grey_fav"
+                        android:layout_gravity="center"/>
+
+
+                </RelativeLayout>
+
+            </android.support.v7.widget.Toolbar>
+
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
@@ -31,48 +90,7 @@
                 app:expandedTitleMarginStart="48dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_collapseMode="parallax">
 
-                    <android.support.v4.view.ViewPager
-                        android:id="@+id/viewpager"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:visibility="gone"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-
-                    <ImageView
-                        android:id="@+id/user_profile_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-                    <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_marginTop="@dimen/medium_margin"
-                        android:visibility="visible">
-
-
-                        <ImageView
-                            android:id="@+id/edit_profile_image"
-                            android:layout_width="@dimen/user_profile_edit_image_width"
-                            android:layout_height="@dimen/user_profile_edit_image_height"
-                            android:layout_alignParentBottom="true"
-                            android:layout_alignParentRight="true"
-                            android:background="#E6E6FA"
-                            android:gravity="center"
-                            android:padding="@dimen/small_padding"
-                            android:src="@drawable/editicon"
-                            android:visibility="gone" />
-
-                    </RelativeLayout>
-
-                </FrameLayout>
 
 
                 <RelativeLayout
@@ -80,17 +98,7 @@
                     android:layout_height="match_parent">
 
 
-                    <TextView
-                        android:id="@+id/user_name"
 
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginLeft="35dp"
-                        android:text=""
-                        android:textColor="#FFFFFF"
-                        android:textSize="@dimen/medium_textsize"
-                        android:textStyle="bold" />
 
                     <ImageView
                         android:id="@+id/page1"
@@ -124,46 +132,7 @@
 
                 </RelativeLayout>
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:clipToPadding="false"
-                    app:contentInsetEnd="0dp"
-                    app:contentInsetLeft="0dp"
-                    app:contentInsetRight="0dp"
-                    app:contentInsetStart="0dp"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:padding="@dimen/small_padding">
-
-
-                        <ImageView
-                            android:id="@+id/backPreviousActivityImage"
-                            android:layout_width="@dimen/small_image_size"
-                            android:layout_height="@dimen/small_image_size"
-                            android:onClick="backBtnAction"
-                            android:src="@drawable/back_arrow"
-                            android:tint="@color/white" />
-
-                        <ImageView
-                            android:id="@+id/likeImage"
-                            android:layout_width="@dimen/small_image_size"
-                            android:layout_height="@dimen/small_image_size"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginRight="@dimen/small_margin"
-                            android:src="@drawable/favorite" />
-
-
-                    </RelativeLayout>
-
-                </android.support.v7.widget.Toolbar>
 
 
             </android.support.design.widget.CollapsingToolbarLayout>
@@ -191,6 +160,71 @@
                     android:layout_marginRight="@dimen/small_margin"
                     android:layout_marginTop="@dimen/medium_margin"
                     android:orientation="vertical">
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_collapseMode="parallax"
+                        android:layout_marginBottom="5dp">
+
+                        <RelativeLayout
+                            xmlns:android="http://schemas.android.com/apk/res/android"
+                            xmlns:app="http://schemas.android.com/apk/res-auto"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                            <android.support.v4.view.ViewPager
+                                android:id="@+id/pager"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:visibility="visible"/>
+
+                            <LinearLayout
+                                android:paddingTop="10dp"
+                                android:id="@+id/sliderDots"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:gravity="center_vertical|center_horizontal"
+                                android:layout_alignParentBottom="true"></LinearLayout>
+                        </RelativeLayout>
+
+                        <android.support.v4.view.ViewPager
+                            android:id="@+id/viewpager"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:visibility="gone"
+                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+
+                        <ImageView
+                            android:id="@+id/user_profile_image"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:layout_marginTop="@dimen/medium_margin"
+                            android:visibility="visible">
+
+
+                            <ImageView
+                                android:id="@+id/edit_profile_image"
+                                android:layout_width="@dimen/user_profile_edit_image_width"
+                                android:layout_height="@dimen/user_profile_edit_image_height"
+                                android:layout_alignParentBottom="true"
+                                android:layout_alignParentRight="true"
+                                android:background="#E6E6FA"
+                                android:gravity="center"
+                                android:padding="@dimen/small_padding"
+                                android:src="@drawable/editicon"
+                                android:visibility="gone" />
+
+                        </RelativeLayout>
+
+                    </FrameLayout>
 
                     <LinearLayout
                         android:id="@+id/smileyandVerificationLayout"
