--- a/app/src/main/res/layout/activity_own_user_profile_layout.xml
+++ b/app/src/main/res/layout/activity_own_user_profile_layout.xml
@@ -34,71 +34,12 @@
 
 
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_collapseMode="parallax">
 
-                    <android.support.v4.view.ViewPager
-                        android:id="@+id/pager"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:visibility="visible"/>
-
-                    <android.support.v4.view.ViewPager
-                        android:id="@+id/viewpager"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:visibility="gone"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-
-                    <ImageView
-                        android:id="@+id/user_profile_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-                    <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_marginTop="@dimen/medium_margin"
-                        android:visibility="visible">
-
-
-
-                        <ImageView
-                            android:id="@+id/edit_profile_image"
-                            android:layout_width="@dimen/user_profile_edit_image_width"
-                            android:layout_height="@dimen/user_profile_edit_image_height"
-                            android:layout_alignParentBottom="true"
-                            android:layout_alignParentRight="true"
-                            android:background="#E6E6FA"
-                            android:gravity="center"
-                            android:padding="@dimen/small_padding"
-                            android:src="@drawable/editicon"
-                            android:visibility="invisible" />
-
-                    </RelativeLayout>
-
-                </FrameLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-
-                    <TextView
-                        android:id="@+id/user_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginLeft="35dp"
-                        android:text=""
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="@dimen/medium_textsize"
-                        android:textStyle="bold" />
 
                     <ImageView
                         android:id="@+id/page1"
@@ -140,23 +81,38 @@
                     app:contentInsetRight="0dp"
                     app:contentInsetStart="0dp"
                     app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    android:background="@color/white">
 
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:padding="@dimen/small_padding">
+                        android:padding="@dimen/small_padding"
+                        >
 
 
                         <ImageView
                             android:id="@+id/backPreviousActivityImage"
                             android:layout_width="@dimen/small_image_size"
                             android:layout_height="@dimen/small_image_size"
+                            android:layout_gravity="center"
+                            android:layout_centerVertical="true"
                             android:onClick="backBtnAction"
-                            android:src="@drawable/back_arrow"
-                            android:tint="@color/white" />
+                            android:src="@drawable/red_back_arrow"/>
+                        <TextView
+                            android:id="@+id/user_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:lines="2"
+                            android:text=""
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:gravity="center"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="@dimen/medium_textsize"
+                            android:textStyle="bold" />
 
                         <ImageView
                             android:id="@+id/likeImage"
@@ -182,6 +138,8 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
+
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -196,6 +154,71 @@
                     android:layout_marginRight="@dimen/small_margin"
                     android:layout_marginTop="@dimen/medium_margin"
                     android:orientation="vertical">
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_collapseMode="parallax"
+                        android:layout_marginBottom="9dp">
+                        <RelativeLayout
+                            xmlns:android="http://schemas.android.com/apk/res/android"
+                            xmlns:app="http://schemas.android.com/apk/res-auto"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                            <android.support.v4.view.ViewPager
+                                android:id="@+id/pager"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:visibility="visible"/>
+
+                            <LinearLayout
+                                android:paddingTop="10dp"
+                                android:id="@+id/sliderDots"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:gravity="center_vertical|center_horizontal"
+                                android:layout_alignParentBottom="true"></LinearLayout>
+                        </RelativeLayout>
+
+                        <android.support.v4.view.ViewPager
+                            android:id="@+id/viewpager"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:visibility="gone"
+                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+
+                        <ImageView
+                            android:id="@+id/user_profile_image"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:layout_marginTop="@dimen/medium_margin"
+                            android:visibility="visible">
+
+
+
+                            <ImageView
+                                android:id="@+id/edit_profile_image"
+                                android:layout_width="@dimen/user_profile_edit_image_width"
+                                android:layout_height="@dimen/user_profile_edit_image_height"
+                                android:layout_alignParentBottom="true"
+                                android:layout_alignParentRight="true"
+                                android:background="#E6E6FA"
+                                android:gravity="center"
+                                android:padding="@dimen/small_padding"
+                                android:src="@drawable/editicon"
+                                android:visibility="invisible" />
+
+                        </RelativeLayout>
+
+                    </FrameLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
