--- a/app/src/main/res/layout/activity_mobile_varification.xml
+++ b/app/src/main/res/layout/activity_mobile_varification.xml
@@ -63,57 +63,111 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/medium_textsize"
+    <ScrollView
         android:layout_below="@id/toolbar"
-        android:text="@string/verification_message1"
-        android:layout_marginTop="100dp"
-        android:gravity="center"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/medium_textsize"
-        android:layout_below="@id/text1"
-        android:text="@string/verification_message2"
-        android:gravity="center"/>
-    <EditText
-        android:id="@+id/edit_text"
-        android:layout_below="@id/text2"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="ভেরিফিকেশন কোড"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/white"/>
-    <Button
-        android:id="@+id/next"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/edit_text"
-        android:layout_marginTop="50dp"
-        android:textSize="30sp"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:textColor="@color/white"
-        android:text="পরবর্তী ধাপ"
-        android:background="@color/colorPrimary"/>
+        <LinearLayout
 
-    <TextView
-        android:id="@+id/text3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/medium_textsize"
-        android:layout_below="@id/next"
-        android:text="@string/verification_message3"
-        android:gravity="center"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginTop="50dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <net.rimoto.intlphoneinput.IntlPhoneInput
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/numbervarifytextView1"
+                android:layout_alignRight="@+id/numbervarifytextView1"
+                android:background="@color/back_verifycode_edittext1"
+                android:layout_marginTop="15dp"
+                app:textSize="14sp"
+                app:textColor="#000000"
+                app:flagPaddingEnd="4dp"
+                app:flagPaddingStart="4dp"
+                app:flagPaddingTop="4dp"
+                app:flagPaddingBottom="4dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:id="@+id/my_phone_input"
+                android:padding="5dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/numbervarifytextView1"/>
+
+            <Button
+                android:id="@+id/sendVerificationCode"
+                android:layout_below="@id/my_phone_input"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="50dp"
+                android:textSize="30sp"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
+                android:textColor="@color/white"
+                android:text="ভেরিফিকেশন কোড পাঠান"
+                android:background="@color/colorPrimary"/>
+            <!---->
+
+
+
+            <TextView
+                android:id="@+id/text1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/medium_textsize"
+                android:text="@string/verification_message1"
+                android:layout_marginTop="98dp"
+                android:gravity="center"
+                android:layout_below="@+id/toolbar"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:id="@+id/text2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/medium_textsize"
+                android:layout_below="@id/text1"
+                android:text="@string/verification_message2"
+                android:gravity="center"/>
+            <EditText
+                android:id="@+id/verification_code"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="ভেরিফিকেশন কোড"
+                android:background="@color/white"
+                android:layout_centerVertical="true"
+                android:layout_alignLeft="@+id/next"
+                android:layout_alignStart="@+id/next" />
+            <Button
+                android:id="@+id/verify"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@id/verification_code"
+                android:layout_marginTop="50dp"
+                android:textSize="30sp"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
+                android:textColor="@color/white"
+                android:text="ভেরিফাই করুন"
+                android:background="@color/colorPrimary"/>
+
+            <TextView
+                android:id="@+id/text3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/medium_textsize"
+                android:layout_below="@id/next"
+                android:text="@string/verification_message3"
+                android:gravity="center"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginTop="50dp"/>
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
 
 
 </RelativeLayout>
