--- a/app/src/main/res/layout/brother.xml
+++ b/app/src/main/res/layout/brother.xml
@@ -4,12 +4,27 @@
     android:orientation="vertical"
     android:layout_marginTop="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="reject"
-        android:layout_gravity="right"
-        android:id="@+id/reject"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal"
+        android:gravity="right"
+        android:id="@+id/reject"
+        android:layout_marginRight="10dp"
+        >
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/remove"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="বাদ দিন"
+            android:layout_gravity="right"
+            android:layout_marginTop="10dp"
+            />
+    </LinearLayout>
+
     <EditText
         android:id="@+id/name_brother"
         android:layout_width="match_parent"
@@ -186,4 +201,6 @@
             />
 
     </LinearLayout>
+
+
 </LinearLayout>
