--- a/app/src/main/res/layout/activity_registration_family_info_first_page.xml
+++ b/app/src/main/res/layout/activity_registration_family_info_first_page.xml
@@ -89,6 +89,7 @@
                 />
 
             <EditText
+                android:id="@+id/name_father"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="বাবার নাম*"
@@ -168,6 +169,7 @@
             </LinearLayout>
 
             <EditText
+                android:id="@+id/designation_father"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="পদবী"
@@ -180,6 +182,7 @@
                 android:layout_marginBottom="10dp"
                 android:singleLine="true"/>
             <EditText
+                android:id="@+id/institution_father"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="প্রতিষ্ঠান"
@@ -207,6 +210,7 @@
                 />
 
             <EditText
+                android:id="@+id/name_mother"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="মায়ের নাম"
@@ -286,6 +290,7 @@
             </LinearLayout>
 
             <EditText
+                android:id="@+id/designation_mother"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="পদবী"
@@ -298,6 +303,7 @@
                 android:layout_marginBottom="10dp"
                 android:singleLine="true"/>
             <EditText
+                android:id="@+id/institution_mother"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="প্রতিষ্ঠান"
