--- a/app/src/main/res/layout/activity_mobile_varification.xml
+++ b/app/src/main/res/layout/activity_mobile_varification.xml
@@ -64,9 +64,10 @@
     </android.support.v7.widget.Toolbar>
 
     <ScrollView
+        android:id="@+id/scroll_bar"
         android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
 
@@ -74,100 +75,133 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <net.rimoto.intlphoneinput.IntlPhoneInput
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/numbervarifytextView1"
-                android:layout_alignRight="@+id/numbervarifytextView1"
-                android:background="@color/back_verifycode_edittext1"
-                android:layout_marginTop="15dp"
-                app:textSize="14sp"
-                app:textColor="#000000"
-                app:flagPaddingEnd="4dp"
-                app:flagPaddingStart="4dp"
-                app:flagPaddingTop="4dp"
-                app:flagPaddingBottom="4dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:id="@+id/my_phone_input"
-                android:padding="5dp"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/numbervarifytextView1"/>
-
-            <Button
-                android:id="@+id/sendVerificationCode"
-                android:layout_below="@id/my_phone_input"
+            <LinearLayout
+                android:id="@+id/before_sending_varification_code"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="50dp"
-                android:textSize="30sp"
-                android:layout_marginRight="15dp"
-                android:layout_marginLeft="15dp"
-                android:textColor="@color/white"
-                android:text="ভেরিফিকেশন কোড পাঠান"
-                android:background="@color/colorPrimary"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <net.rimoto.intlphoneinput.IntlPhoneInput
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/numbervarifytextView1"
+                    android:layout_alignRight="@+id/numbervarifytextView1"
+                    android:background="@color/back_verifycode_edittext1"
+                    android:layout_marginTop="15dp"
+                    app:textSize="14sp"
+                    app:textColor="#000000"
+                    app:flagPaddingEnd="4dp"
+                    app:flagPaddingStart="4dp"
+                    app:flagPaddingTop="4dp"
+                    app:flagPaddingBottom="4dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:id="@+id/my_phone_input"
+                    android:padding="5dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/numbervarifytextView1"/>
+
+                <Button
+                    android:id="@+id/sendVerificationCode"
+                    android:layout_below="@id/my_phone_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="50dp"
+                    android:textSize="30sp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:textColor="@color/white"
+                    android:text="ভেরিফিকেশন কোড পাঠান"
+                    android:background="@color/colorPrimary"/>
+
+            </LinearLayout>
             <!---->
 
-
-
-            <TextView
-                android:id="@+id/text1"
+            <LinearLayout
+                android:id="@+id/after_sending_verification_code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/medium_textsize"
-                android:text="@string/verification_message1"
-                android:layout_marginTop="98dp"
-                android:gravity="center"
-                android:layout_below="@+id/toolbar"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/text2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/medium_textsize"
-                android:layout_below="@id/text1"
-                android:text="@string/verification_message2"
-                android:gravity="center"/>
-            <EditText
-                android:id="@+id/verification_code"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:hint="ভেরিফিকেশন কোড"
-                android:background="@color/white"
-                android:layout_centerVertical="true"
-                android:layout_alignLeft="@+id/next"
-                android:layout_alignStart="@+id/next" />
-            <Button
-                android:id="@+id/verify"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_below="@id/verification_code"
-                android:layout_marginTop="50dp"
-                android:textSize="30sp"
-                android:layout_marginRight="15dp"
-                android:layout_marginLeft="15dp"
-                android:textColor="@color/white"
-                android:text="ভেরিফাই করুন"
-                android:background="@color/colorPrimary"/>
+                <TextView
+                    android:id="@+id/text1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/medium_textsize"
+                    android:text="@string/verification_message1"
+                    android:layout_marginTop="98dp"
+                    android:gravity="center"
+                    android:layout_below="@+id/toolbar"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
-            <TextView
-                android:id="@+id/text3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/medium_textsize"
-                android:layout_below="@id/next"
-                android:text="@string/verification_message3"
-                android:gravity="center"
-                android:textColor="@color/colorPrimary"
-                android:layout_marginTop="50dp"/>
+                <TextView
+                    android:id="@+id/text2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/medium_textsize"
+                    android:layout_below="@id/text1"
+                    android:text="@string/verification_message2"
+                    android:gravity="center"/>
+                <EditText
+                    android:id="@+id/verification_code"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="ভেরিফিকেশন কোড"
+                    android:background="@color/white"
+                    android:layout_centerVertical="true"
+                    android:layout_alignLeft="@+id/next"
+                    android:layout_alignStart="@+id/next"
+                    android:layout_margin="10dp"
+                    android:imeOptions="actionDone"
+                    android:singleLine="true"
+                    android:padding="10dp"/>
+                <Button
+                    android:id="@+id/verify"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/verification_code"
+                    android:layout_marginTop="50dp"
+                    android:textSize="30sp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:textColor="@color/white"
+                    android:text="পরবর্তী ধাপ"
+                    android:background="@color/colorPrimary"/>
+
+                <TextView
+                    android:id="@+id/text3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/medium_textsize"
+                    android:layout_below="@id/next"
+                    android:text="@string/verification_message3"
+                    android:gravity="center"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="10dp"/>
+                <TextView
+                    android:id="@+id/tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:height="1dp"
+                    android:background="#A9A9A9"/>
+                <TextView
+                    android:id="@+id/login"
+                    android:layout_width="match_parent"
+                    android:text="পুরাতন ব্যবহারকারী লগইন করুন"
+                    android:layout_marginTop="20dp"
+                    android:textAlignment="center"
+                    android:layout_height="50dp"
+                    android:layout_alignParentBottom="true"/>
+
+
+            </LinearLayout>
 
 
         </LinearLayout>
 
+
+
     </ScrollView>
-
-
 
 </RelativeLayout>
