--- a/app/src/main/res/layout/activity_pop_up_choice_selection_third_page.xml
+++ b/app/src/main/res/layout/activity_pop_up_choice_selection_third_page.xml
@@ -65,7 +65,7 @@
             android:id="@+id/accept"
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:text="গ্রহন করুন"
+            android:text="গ্রহণ করুন"
             android:textColor="#626262"
             android:layout_height="50dp"
             android:layout_margin="10dp"
