--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -100,7 +100,7 @@
             android:id="@+id/cancel"
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:text="বাতিল করুন"
+            android:text="@string/registration_cancel_btn_text"
             android:textColor="#626262"
             android:layout_height="50dp"
             android:layout_margin="10dp"
@@ -109,10 +109,11 @@
             android:id="@+id/accept"
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:text="গ্রহণ করুন"
-            android:textColor="#626262"
+            android:text="@string/registration_accept_btn_text"
+            android:textColor="#FFFFFF"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:background="@color/colorPrimary"
             android:descendantFocusability="blocksDescendants"/>
     </LinearLayout>
 
